# fast_api_efsw

./: .gitignore  .python-version  README.md  dockerfile  pyproject.toml  requirements.txt
api/: api.py
mlartifacts/592261138735497612/58ac76007cf64e74acaf245de989888b/artifacts/random_forest/: MLmodel  model.pkl
mlartifacts/592261138735497612/cceeaf52e24c4ca28b6fb8460284cd44/artifacts/model/: MLmodel  conda.yaml  python_env.yaml
mlruns/0/: meta.yaml
mlruns/592261138735497612/: meta.yaml
mlruns/592261138735497612/58ac76007cf64e74acaf245de989888b/: meta.yaml
mlruns/592261138735497612/58ac76007cf64e74acaf245de989888b/metrics/: test_rmse  train_rmse
mlruns/592261138735497612/58ac76007cf64e74acaf245de989888b/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/592261138735497612/cceeaf52e24c4ca28b6fb8460284cd44/: meta.yaml
mlruns/592261138735497612/cceeaf52e24c4ca28b6fb8460284cd44/metrics/: accuracy  f1
mlruns/592261138735497612/cceeaf52e24c4ca28b6fb8460284cd44/tags/: mlflow.log-model.history  mlflow.runName
mlruns/models/iris_lr_model/: meta.yaml
mlruns/models/iris_lr_model/version-1/: meta.yaml
mlruns/models/iris_lr_model/version-2/: meta.yaml
notebooks/: YellowCab.ipynb
src/api/: api.py
