[project]
name = "fast-api-efsw"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow",
    "scikit-learn",
    "pandas",
    "seaborn",
    "numpy",
    "matplotlib",
    "fastapi",
    "uvicorn",
    "gdown",
    "loguru",
    "ipykernel"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
